--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
 
 
 
-
+<li> <a href="go:3"  class="see-all-grid__card">
+                <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/rf6k1sjGSVavqLhwyYoKeOuExez.jpg"> <span class="card__title">
+                   Ted
+ </span>
+            </a> </li>
           <li> <a href="https://www.trbmv.xyz/p/midway-batalla-en-el-pacifico.html?m=1"  class="see-all-grid__card">
                 <img src="https://image.tmdb.org/t/p/w300//zfmGUN9SW2t4hYUxIDu2niTJKhB.jpg"> <span class="card__title">
                    Midway: Batalla en el Pacífico
