--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-<li> <a href="go:3"  class="see-all-grid__card">
+<li> <a href="https://sachield.xyz/vid/okru.php?v=82253056633"  class="see-all-grid__card">
                 <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/rf6k1sjGSVavqLhwyYoKeOuExez.jpg"> <span class="card__title">
                    Ted
  </span>
